1.1

Bug fixes:
Fixed println
#49 (schedule) should search and replace existing items in list 
#107 random function has gone missing
s7 and s8 not defined #118
scale is casting to int #109



1.0.2
Variable duty triangle oscillator ('tri')