@@ -281,6 +281,13 @@ private:
     LISP_FUNC_DECL(useq_trigs);
     LISP_FUNC_DECL(useq_euclidean);
     LISP_FUNC_DECL(useq_eu);
+    
+    LISP_FUNC_DECL(useq_ratiotrig);
+    LISP_FUNC_DECL(useq_ratiostep);
+
+    // LISP_FUNC_DECL(useq_ratiostep);
+
+    
 
     LISP_FUNC_DECL(useq_flatten);
     LISP_FUNC_DECL(useq_step);
